welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: ')' expected but ';' found.
	aFaireSiLaConditionEstVraie(recule();)
                                            ^Program:2: error: illegal start of statement
	aFaireSiLaConditionEstVraie(recule();)
                                             ^